<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.becpg</groupId>
	<artifactId>becpg-parent</artifactId>
	<packaging>pom</packaging>
	<name>beCPG</name>
	<version>1.5.2</version>
	<description>BeCPG Parent Project</description>
	<organization>
		<name>BeCPG</name>
		<url>http://www.becpg.fr</url>
	</organization>
	<mailingLists>
		<mailingList>
			<name>becpg</name>
			<post>mailing@becpg.fr</post>
		</mailingList>
	</mailingLists>
	<scm>
		<connection>scm:hg:https://www.becpg.fr/hg/becpg</connection>
		<developerConnection>scm:hg:https://${maven.username}@becpg.fr/hg/becpg/</developerConnection>
		<url>https://www.becpg.fr/hg/becpg</url>
	</scm>

	<issueManagement>
		<system>RedMine</system>
		<url>http://www.becpg.fr/redmine</url>
	</issueManagement>

	<licenses>
		<license>
			<name>Licence beCPG</name>
			<url>http://www.becpg.fr/licenses/LICENSE-2.0</url>
			<comments>Copyright (C) 2010-2011 beCPG. All rights reserved.</comments>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>matthieu.laborie</id>
			<name>Matthieu Laborie</name>
			<email>matthieu.laborie@becpg.fr</email>
			<timezone>1</timezone>
			<organization>becPG</organization>
			<organizationUrl>http://www.becpg.fr</organizationUrl>
		</developer>
		<developer>
			<id>philippe.quere</id>
			<name>Philippe Quéré</name>
			<email>philippe.quere@becpg.fr</email>
			<timezone>1</timezone>
			<organization>becPG</organization>
			<organizationUrl>http://www.becpg.fr</organizationUrl>
		</developer>
	</developers>

	<properties>
		<!-- Test -->
		<alfresco.data.location>/srv/becpg-data/test/becpg</alfresco.data.location>
		
		<!-- By default the H2 embedded database datafile is created under the 
			alfresco.data.location folder -->
		<alfresco.db.params>MODE=PostgreSQL;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=10000;MVCC=TRUE</alfresco.db.params>
		<alfresco.db.url>jdbc:h2:${alfresco.data.location}/h2_data/${alfresco.db.name};${alfresco.db.params}</alfresco.db.url> 
	<!--   <alfresco.db.url>jdbc:h2:mem:alfrescoTest;${alfresco.db.params}</alfresco.db.url> -->
		<alfresco.db.datasource.class>org.h2.jdbcx.JdbcDataSource</alfresco.db.datasource.class>
		<alfresco.db.name>becpg_test_contribs</alfresco.db.name>
		<!-- 
		<alfresco.db.url>jdbc:mysql://localhost/${alfresco.db.name}</alfresco.db.url>
		<alfresco.db.datasource.class>org.gjt.mm.mysql.Driver</alfresco.db.datasource.class>
		<alfresco.db.host>localhost</alfresco.db.host>
		<alfresco.db.username>becpg</alfresco.db.username>
		<alfresco.db.password>becpg</alfresco.db.password> -->

		<!-- AMP config dir -->
		<alfresco.amp.config.dir>alfresco/module/${project.artifactId}</alfresco.amp.config.dir>
		<!-- build -->
		<alfresco.groupId>org.alfresco</alfresco.groupId>
		<alfresco.version>4.2.c</alfresco.version>
		<!-- Old Version 3.7.2.v20120214-1408 -->
		<birt.version>4.2.2</birt.version>
		
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<app.log.dir>${project.build.directory}/</app.log.dir>
		<app.log.root.level>WARN</app.log.root.level>

		<app.testing.jvm.args>-Xms256m -Xmx1524m -XX:MaxPermSize=256m
			-Duser.language=fr</app.testing.jvm.args>
			
		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
	</properties>
	<!-- <dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${alfresco.groupId}</groupId>
				<artifactId>alfresco-platform-distribution</artifactId>
				<version>${alfresco.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement> -->

	<distributionManagement>
      <repository>
          <id>becpg-repo</id>
          <name>becpg repository</name>
          <url>scp://becpg.fr/srv/becpg-data/maven</url>
	    </repository>
	</distributionManagement>

	 <repositories>
	 	<!-- <repository>
           <id>becpg-repo</id>
           <url>https://becpg.fr/maven</url>
      </repository> -->

		 <repository>
			<id>alfresco-public</id>
			<url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
		</repository>
		<repository>
			<id>alfresco-public-snapshots</id>
			<url>https://artifacts.alfresco.com/nexus/content/groups/public-snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
	<!-- 	<pluginRepository>
           <id>becpg-repo</id>
           <url>https://becpg.fr/maven</url>
      </pluginRepository> -->
		<pluginRepository>
			<id>alfresco-plugin-public</id>
			<url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
		</pluginRepository>
		<pluginRepository>
			<id>alfresco-plugin-public-snapshots</id>
			<url>https://artifacts.alfresco.com/nexus/content/groups/public-snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.13</version>
				<configuration>
					<argLine>${app.testing.jvm.args}</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.alfresco.maven.plugin</groupId>
				<artifactId>maven-amp-plugin</artifactId>
				<version>3.0.4</version>
				<extensions>true</extensions>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
					<overlays>
						<!-- This sample adds records management module in the finally built 
							AMP <overlay> <groupId>org.org.alfresco</groupId> <artifactId>recordsmanagement</artifactId> 
							<version>2.1.0</version> <type>amp</type> </overlay> -->
						<!-- The current AMP is always last in order to overwrite other modules' 
							modules.properties <overlay></overlay> -->
					</overlays>
				</configuration>
			</plugin>
			<plugin>
            <groupId>org.codehaus.sonar</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.6.1</version>
         </plugin>
		</plugins>
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>**README-*</exclude>
					<exclude>**/*.csv</exclude>
				</excludes>
			</resource>
			<resource>
				<filtering>false</filtering>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*.csv</include>
				</includes>
			</resource>
			<!-- Copies and filters AMP config in the proper package 'alfresco/module/becpg.becpg-core' 
				so to enforce full module naming single sourcing from POM properties -->
			<resource>
				<filtering>true</filtering>
				<directory>src/main/config</directory>
				<targetPath>${alfresco.amp.config.dir}</targetPath>
				<excludes>
					<exclude>**README-*</exclude>
					<exclude>**/*.properties</exclude>
				</excludes>
			</resource>
			<!-- Copies web files -->
			<resource>
				<filtering>false</filtering>
				<directory>src/main/web</directory>
				<targetPath>alfresco/module/${project.artifactId}/web</targetPath>
				<excludes>
					<exclude>**README-*</exclude>
				</excludes>
			</resource>
			<!-- The file-mapping.properties is simply ignored by the plugin when 
				assembling the AMP file -->
			 <resource>
				<filtering>true</filtering>
				<directory>${basedir}</directory>
				<includes>
					<include>file-mapping.properties</include>
				</includes>
				<targetPath>../${project.artifactId}-${project.version}/</targetPath>
				<!-- 	hack TODO bug here make amp include all target -->
			</resource>	
		</resources>
		<testResources>
			<testResource>
				<filtering>true</filtering>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		
	</build>
	<dependencies>

		<dependency>
			<groupId>${alfresco.groupId}</groupId>
			<artifactId>alfresco-repository</artifactId>
			<version>${alfresco.version}</version>
			<classifier>config</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>${alfresco.groupId}</groupId>
			<artifactId>alfresco-data-model</artifactId>
			<version>${alfresco.version}</version>
			<classifier>config</classifier>
			<scope>provided</scope>
		</dependency>

		<!-- test -->

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.3.158</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>tk.skuro.alfresco</groupId>
			<artifactId>h2-support</artifactId>
			<version>1.5</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.12</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>3.0.5.RELEASE</version>
			<scope>test</scope>
		</dependency>
		<!-- Requires this explicit test dependency, for a Spring 3.0.5 bug | See 
			https://jira.springsource.org/browse/SPR-8527 -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>3.0.6.RELEASE</version>
			<scope>provided</scope>
		</dependency>

	</dependencies>
	<modules>
		<module>becpg-report</module>
		<module>becpg-core</module>
		<module>becpg-share</module>
		<module>becpg-olap</module>
		<module>distribution</module>
  </modules>

	<profiles>
		<profile>
			<id>dev-tours</id>
			<properties>
			    <!-- Test -->
			   <alfresco.data.location>/dev/shm/alfresco</alfresco.data.location>
				<!-- <alfresco.data.location>/opt/becpg/workspace/becpg/alf_data</alfresco.data.location> -->
				<!-- Test used by default h2 
				<alfresco.db.url>jdbc:mysql://localhost/${alfresco.db.name}</alfresco.db.url>
				<alfresco.db.datasource.class>org.gjt.mm.mysql.Driver</alfresco.db.datasource.class>
				<alfresco.db.host>localhost</alfresco.db.host>
				<alfresco.db.name>becpg_test</alfresco.db.name>
				<alfresco.db.username>becpg</alfresco.db.username>
				<alfresco.db.password>becpg</alfresco.db.password> -->
			</properties>
		</profile>
		<profile>
			<id>dev-montrouge</id>
			<properties>
			    <!-- Test -->
				<alfresco.data.location>/opt/becpg/workspace/becpg/alf_data</alfresco.data.location>
				 <alfresco.data.location>/dev/shm/alfresco</alfresco.data.location>
			</properties>
		</profile>
		<profile>
			<id>purge</id>
			<build>
				<plugins>
					<!-- Cleaning Alfresco Repository storage/log folders/files -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-clean-plugin</artifactId>
						<version>2.5</version>
						<configuration>
							<filesets>
								<fileset>
									<directory>${alfresco.data.location}</directory>
								</fileset>
								<fileset>
									<directory>${app.log.dir}</directory>
									<includes>
										<include>*.log</include>
									</includes>
								</fileset>
							</filesets>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>enable-native2ascii</id>
			<activation>
				<file>
					<exists>src/main/config</exists>
				</file>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>native2ascii-maven-plugin</artifactId>
						<version>1.0-alpha-1</version>
						<inherited>true</inherited>
						<executions>
							<execution>
								<phase>process-resources</phase>
								<goals>
									<goal>native2ascii</goal>
								</goals>
								<configuration>
									<encoding>8859_1</encoding>
									<dest>target/classes/${alfresco.amp.config.dir}</dest>
									<src>src/main/config</src>
									<includes>**/*.properties</includes>
								</configuration>
							</execution>
						</executions>
						<dependencies>
							<dependency>
								<groupId>com.sun</groupId>
								<artifactId>tools</artifactId>
								<version>1.7.0</version>
								<scope>system</scope>
								<systemPath>${java.home}/../lib/tools.jar</systemPath>
							</dependency>
						</dependencies>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>